// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PillButtonEnhanced> component in active, collapsed state (with content prop) should render correctly 1`] = `
<div>
  <div
    aria-disabled="false"
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main PillButtonEnhanced__main--isActive"
      data-state="closed"
      id="radix-:r4:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
      <div
        class="PillButtonEnhanced__arrowIcon"
      >
        <svg
          aria-label="down arrow"
          data-testid="default-icon"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        />
      </div>
    </div>
    <button
      class="Button Button--variant_ghost Button--context_secondary IconButton--size_medium PillButtonEnhanced__clear"
      style="width: auto;"
      tabindex="0"
      type="button"
    >
      <svg
        aria-label="clear label"
        class="IconButton__icon--size_medium"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </button>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component in active, open state (content and isOpen prop) should render correctly 1`] = `
<div>
  <div
    aria-disabled="false"
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main PillButtonEnhanced__main--isActive"
      data-state="closed"
      id="radix-:ra:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
      <div
        class="PillButtonEnhanced__arrowIcon PillButtonEnhanced__arrowIcon--isOpen"
      >
        <svg
          aria-label="up arrow"
          data-testid="default-icon"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        />
      </div>
    </div>
    <button
      class="Button Button--variant_ghost Button--context_secondary IconButton--size_medium PillButtonEnhanced__clear"
      style="width: auto;"
      tabindex="0"
      type="button"
    >
      <svg
        aria-label="clear label"
        class="IconButton__icon--size_medium"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </button>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component in inactive, collapsed state (with minimal props) should render correctly 1`] = `
<div>
  <div
    aria-disabled="false"
    class="PillButtonEnhanced"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:r0:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__contentSeparator"
      >
        ,
      </span>
      <span
        class="PillButtonEnhanced__additionalContent"
      >
        +2
      </span>
      <div
        class="PillButtonEnhanced__arrowIcon"
      >
        <svg
          aria-label="down arrow"
          data-testid="default-icon"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component in inactive, open state (isOpen prop) should render correctly 1`] = `
<div>
  <div
    aria-disabled="false"
    class="PillButtonEnhanced"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:r2:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <div
        class="PillButtonEnhanced__arrowIcon PillButtonEnhanced__arrowIcon--isOpen"
      >
        <svg
          aria-label="up arrow"
          data-testid="default-icon"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component with additional props should render correctly with priority selector 1`] = `
<div>
  <div
    aria-disabled="false"
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="priorityButton"
      class="Button Button--variant_ghost Button--context_secondary IconButton--size_medium PrioritySelector__icon PrioritySelector__icon--mandatory PillButtonEnhanced__priority test-class"
      data-state="closed"
      id="radix-:rk:"
      type="button"
    >
      <svg
        class="IconButton__icon--size_medium"
        data-testid="default-icon"
        viewBox="0 0 24 24"
      />
    </button>
    <div
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main PillButtonEnhanced__main--isActive"
      data-state="closed"
      id="radix-:ri:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
      <div
        class="PillButtonEnhanced__arrowIcon"
      >
        <svg
          aria-label="down arrow"
          data-testid="default-icon"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        />
      </div>
    </div>
    <button
      class="Button Button--variant_ghost Button--context_secondary IconButton--size_medium PillButtonEnhanced__clear"
      style="width: auto;"
      tabindex="0"
      type="button"
    >
      <svg
        aria-label="clear label"
        class="IconButton__icon--size_medium"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </button>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component with additional props should set style according to prop 1`] = `
<div>
  <div
    aria-disabled="false"
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main PillButtonEnhanced__main--isActive"
      data-state="closed"
      id="radix-:rg:"
      role="button"
      style="max-width: fit-content;"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
      <div
        class="PillButtonEnhanced__arrowIcon"
      >
        <svg
          aria-label="down arrow"
          data-testid="default-icon"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        />
      </div>
    </div>
    <button
      class="Button Button--variant_ghost Button--context_secondary IconButton--size_medium PillButtonEnhanced__clear"
      style="width: auto;"
      tabindex="0"
      type="button"
    >
      <svg
        aria-label="clear label"
        class="IconButton__icon--size_medium"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </button>
  </div>
</div>
`;
